syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "economic-school/pb";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  int32 user_type = 4;
  string profile_image_url = 5;
  bool is_email_verified = 6;
  google.protobuf.Timestamp password_changed_at = 7;
  google.protobuf.Timestamp created_at = 8;
  int32 version = 9;
}

message GetUserByUsernameParam {
  string username = 1;
}

message GetUserByEmailParam {
  string email = 1;
}

